; ModuleID = '/home/carl/AnghaBench/h2o/examples/libh2o/extr_latency-optimization.c_server_write.c'
source_filename = "/home/carl/AnghaBench/h2o/examples/libh2o/extr_latency-optimization.c_server_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i64 }

@latopt_cond = common dso_local global i32 0, align 4
@server_flag_received = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"writing %zu bytes\0A\00", align 1
@server_on_write_complete = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @server_write(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_4__, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @h2o_socket_prepare_for_latency_optimized_write(i32* %5, i32* @latopt_cond)
  store i64 %6, i64* %3, align 8
  %7 = call { i8*, i64 } (...) @prepare_write_buf()
  %8 = bitcast %struct.TYPE_4__* %4 to { i8*, i64 }*
  %9 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %8, i32 0, i32 0
  %10 = extractvalue { i8*, i64 } %7, 0
  store i8* %10, i8** %9, align 8
  %11 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %8, i32 0, i32 1
  %12 = extractvalue { i8*, i64 } %7, 1
  store i64 %12, i64* %11, align 8
  %13 = load i64, i64* @server_flag_received, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  store i8 49, i8* %18, align 1
  br label %19

19:                                               ; preds = %15, %1
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp ult i64 %20, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %19
  %25 = load i64, i64* %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  store i64 %25, i64* %26, align 8
  br label %27

27:                                               ; preds = %24, %19
  %28 = load i32, i32* @stderr, align 4
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @fprintf(i32 %28, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %30)
  %32 = load i32*, i32** %2, align 8
  %33 = load i32, i32* @server_on_write_complete, align 4
  %34 = call i32 @h2o_socket_write(i32* %32, %struct.TYPE_4__* %4, i32 1, i32 %33)
  ret void
}

declare dso_local i64 @h2o_socket_prepare_for_latency_optimized_write(i32*, i32*) #1

declare dso_local { i8*, i64 } @prepare_write_buf(...) #1

declare dso_local i32 @fprintf(i32, i8*, i64) #1

declare dso_local i32 @h2o_socket_write(i32*, %struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
